--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -37,7 +37,7 @@
     }
 
     /* Last block shouldn't have margin, too much white space. */
-    ::content property-block:last-child /deep/ p {
+    ::content > property-block:last-child {
       margin-bottom: 0;
     }
 
