Two-column layout support!

--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -10,8 +10,7 @@
                    Georgia, serif;
       color: #7A200D;
       font-weight: 700;
-      margin-top: -3px;
-      margin-bottom: 0px;
+      margin: 0px;
       font-size: 23px;
       letter-spacing: 1px;
       font-variant: small-caps;
