Support using property-line for legendary actions

--- a/demo-two-column.html
+++ b/demo-two-column.html
@@ -7,8 +7,8 @@
     <link rel="import" href="src/top-stats.html">
     <link rel="import" href="src/creature-heading.html">
     <link rel="import" href="src/abilities-block.html">
-    <link rel="import" href="src/property-block.html">
     <link rel="import" href="src/property-line.html">
+    <link rel="import" href="src/property-block.html">
     <link rel="import" href="src/content-column.html">
     <link rel="import" href="src/stat-block.html">
 
@@ -139,24 +139,24 @@
       time and only at the end of another creature's turn. The werewolf
       regains spent legendary actions at the start of its turn.</p>
 
-      <property-block>
+      <property-line>
         <h4>Leap.</h4>
         <p>The werewolf moves up to its speed without provoking
           opportunity attacks.</p>
-      </property-block>
+      </property-line>
 
-      <property-block>
+      <property-line>
         <h4>Bark Orders.</h4>
         <p>The werewolf chooses a friendly creature who can
           see or hear it. That creature can use its reaction to move up to its
           speed without provoking opportunity attacks.</p>
-      </property-block>
+      </property-line>
 
-      <property-block>
+      <property-line>
         <h4>Frenzy (Costs 2 Actions).</h4>
         <p>The werewolf can make one claw attack against each creature within 5
           feet of it.</p>
-      </property-block>
+      </property-line>
   </stat-block>
 </body>
 </html>
