--- a/src/top-stats.html
+++ b/src/top-stats.html
@@ -1,6 +1,12 @@
 <link rel="import" href="tapered-rule.html">
 
 <template id="top-stats">
+  <style>
+    ::content * {
+      color: #7A200D;
+    }
+  </style>
+
   <tapered-rule></tapered-rule>
   <content></content>
   <tapered-rule></tapered-rule>
