--- a/src/content-column.html
+++ b/src/content-column.html
@@ -22,6 +22,7 @@
     ::content > p {
       margin-top: 0.3em;
       margin-bottom: 0.9em;
+      line-height: 1.5;
     }
 
     /* Last child shouldn't have bottom margin, too much white space. */
