--- a/demo-two-column-inlined.html
+++ b/demo-two-column-inlined.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css"/><link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/><meta charset="utf-8"/><title>Statblock example</title><style>
+<html><head><link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css"/><link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/><meta charset="utf-8"/><title>Two-column statblock example</title><style>
       body {
         margin: 0;
       }
@@ -186,6 +186,48 @@
   });
   thatDoc.registerElement(elemName, {prototype: proto});
 })(window, document);
+</script><template id="property-line">
+  <style>
+    :host {
+      line-height: 1.4;
+      display: block;
+      text-indent: -1em;
+      padding-left: 1em;
+    }
+
+    ::content > h4 {
+      margin: 0;
+      display: inline;
+      font-weight: bold;
+    }
+
+    ::content > p:first-of-type {
+      display: inline;
+      text-indent: 0;
+    }
+
+    ::content > p {
+      text-indent: 1em;
+      margin: 0;
+    }
+  </style>
+  <content></content>
+</template><script>
+(function(window, document) {
+  var elemName = 'property-line';
+  var thatDoc = document;
+  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
+  var proto = Object.create(HTMLElement.prototype, {
+    createdCallback: {
+      value: function() {
+        var template = thisDoc.getElementById(elemName);
+        var clone = thatDoc.importNode(template.content, true);
+        this.createShadowRoot().appendChild(clone);
+      }
+    }
+  });
+  thatDoc.registerElement(elemName, {prototype: proto});
+})(window, document);
 </script><template id="property-block">
   <style>
     :host {
@@ -216,48 +258,6 @@
 </template><script>
 (function(window, document) {
   var elemName = 'property-block';
-  var thatDoc = document;
-  var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
-  var proto = Object.create(HTMLElement.prototype, {
-    createdCallback: {
-      value: function() {
-        var template = thisDoc.getElementById(elemName);
-        var clone = thatDoc.importNode(template.content, true);
-        this.createShadowRoot().appendChild(clone);
-      }
-    }
-  });
-  thatDoc.registerElement(elemName, {prototype: proto});
-})(window, document);
-</script><template id="property-line">
-  <style>
-    :host {
-      line-height: 1.4;
-      display: block;
-      text-indent: -1em;
-      padding-left: 1em;
-    }
-
-    ::content > h4 {
-      margin: 0;
-      display: inline;
-      font-weight: bold;
-    }
-
-    ::content > p:first-of-type {
-      display: inline;
-      text-indent: 0;
-    }
-
-    ::content > p {
-      text-indent: 1em;
-      margin: 0;
-    }
-  </style>
-  <content></content>
-</template><script>
-(function(window, document) {
-  var elemName = 'property-line';
   var thatDoc = document;
   var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
@@ -405,73 +405,129 @@
 
 
 <stat-block>
-    <creature-heading>
-      <h1>Animated Armor</h1>
-      <h2>Medium construct, unaligned</h2>
-    </creature-heading>
+    <content-column>
+      <creature-heading>
+        <h1>Werewolf Alpha</h1>
+        <h2>Medium humanoid (human, shapechanger), chaotic evil</h2>
+      </creature-heading>
 
-    <top-stats>
+      <top-stats>
+        <property-line>
+          <h4>Armor Class</h4>
+          <p>14 (armor scraps) in humanoid form, 16 (natural armor) in wolf
+            or hybrid form</p>
+        </property-line>
+        <property-line>
+          <h4>Hit Points</h4>
+          <p>119 (14d8 + 56)</p>
+        </property-line>
+        <property-line>
+          <h4>Speed</h4>
+          <p>30 ft. (40 ft. in wolf form)</p>
+        </property-line>
+
+        <abilities-block data-cha="15" data-con="18" data-dex="15" data-int="11" data-str="20" data-wis="14"></abilities-block>
+        <property-line>
+          <h4>Saving Throws</h4>
+          <p>Str +9, Con +8, Wis +6</p>
+        </property-line>
+        <property-line>
+          <h4>Skills</h4>
+          <p>Athletics +9, Perception +6</p>
+        </property-line>
+        <property-line>
+          <h4>Damage Immunities</h4>
+          <p>bludgeoning, piercing, and slashing damage from nonmagical weapons
+            that aren't silvered</p>
+        </property-line>
+        <property-line>
+          <h4>Senses</h4>
+          <p>passive Perception 16</p>
+        </property-line>
+        <property-line>
+          <h4>Languages</h4>
+          <p>Common (can't speak in wolf form)</p>
+        </property-line>
+        <property-line>
+          <h4>Challenge</h4>
+          <p>9 (5,000 XP)</p>
+        </property-line>
+      </top-stats>
+
+
+      <property-block>
+        <h4>Legendary Resistance (3/Day).</h4>
+        <p>If the werewolf fails a saving throw, it can choose to succeed
+          instead.</p>
+      </property-block>
+
+      <property-block>
+        <h4>Keen Hearing and Smell.</h4>
+        <p>The werewolf has advantage on Wisdom (Perception) checks that rely on
+          hearing or smell.</p>
+      </property-block>
+
+      <property-block>
+        <h4>Pack Leader.</h4>
+        <p>The werewolf's allies have advantage on melee attack rolls against
+          any hostile creature within 5 feet of the werewolf.</p>
+      </property-block>
+
+      <property-block>
+        <h4>Shapechanger.</h4>
+        <p>The werewolf can use its action to polymorph into a wolf-humanoid
+          hybrid or into a wolf, or back into its true form, which is humanoid.
+          Its statistics, other than its AC, are the same in each form. Any
+          equipment it is wearing or carrying isn't transformed. It reverts to
+          its true form if it dies.</p>
+      </property-block>
+    </content-column>
+
+    <content-column>
+      <h3>Actions</h3>
+
+      <property-block>
+        <h4>Multiattack (Hybrid Form Only).</h4>
+        <p>The werewolf makes three attacks: one with its bite and two with its
+          claws.</p>
+      </property-block>
+
+      <property-block>
+        <h4>Bite (Wolf or Hybrid Form Only).</h4>
+        <p><i>Melee Weapon Attack:</i> +9 to hit, reach 5 ft., one target.
+          <i>Hit:</i> 14 (2d8 + 5) piercing damage. If the target is a humanoid,
+          it must succeed on a DC 14 Constitution saving throw or be cursed with
+          werewolf lycanthropy.</p>
+      </property-block>
+
+      <property-block>
+        <h4>Claws (Hybrid Form Only).</h4>
+        <p><i>Melee Weapon Attack:</i> +9 to hit, reach 5 ft., one target.
+          <i>Hit:</i> 16 (2d10 + 5) slashing damage.</p>
+      </property-block>
+
+      <h3>Legendary Actions</h3>
+      <p>The werewolf can take 3 legendary actions, choosing from the
+      options below. Only one legendary action option can be used at a
+      time and only at the end of another creature's turn. The werewolf
+      regains spent legendary actions at the start of its turn.</p>
+
       <property-line>
-        <h4>Armor Class</h4>
-        <p>18 (natural armor)</p>
-      </property-line>
-      <property-line>
-        <h4>Hit Points</h4>
-        <p>33 (6d8 + 6)</p>
-      </property-line>
-      <property-line>
-        <h4>Speed</h4>
-        <p>25ft</p>
+        <h4>Leap.</h4>
+        <p>The werewolf moves up to its speed without provoking
+          opportunity attacks.</p>
       </property-line>
 
-      <abilities-block data-cha="1" data-con="13" data-dex="11" data-int="1" data-str="14" data-wis="3"></abilities-block>
+      <property-line>
+        <h4>Bark Orders.</h4>
+        <p>The werewolf chooses a friendly creature who can
+          see or hear it. That creature can use its reaction to move up to its
+          speed without provoking opportunity attacks.</p>
+      </property-line>
 
       <property-line>
-        <h4>Damage Immunities</h4>
-        <p>poison, psychic</p>
+        <h4>Frenzy (Costs 2 Actions).</h4>
+        <p>The werewolf can make one claw attack against each creature within 5
+          feet of it.</p>
       </property-line>
-      <property-line>
-        <h4>Condition Immunities</h4>
-        <p>blinded, charmed, deafened, exhaustion, frightened, paralyzed,
-          petrified, poisoned</p>
-      </property-line>
-      <property-line>
-        <h4>Senses</h4>
-        <p>blindsight 60 ft. (blind beyond this radius), passive Perception 6</p>
-      </property-line>
-      <property-line>
-        <h4>Languages</h4>
-        <p>—</p>
-      </property-line>
-      <property-line>
-        <h4>Challenge</h4>
-        <p>1 (200 XP)</p>
-      </property-line>
-    </top-stats>
-
-    <property-block>
-      <h4>Antimagic Susceptibility.</h4>
-      <p>The armor is incapacitated while in the area of an <i>antimagic
-        field</i>.  If targeted by <i>dispel magic</i>, the armor must succeed
-        on a Constitution saving throw against the caster’s spell save DC or
-        fall unconscious for 1 minute.</p>
-    </property-block>
-    <property-block>
-      <h4>False Appearance.</h4>
-      <p>While the armor remains motionless, it is indistinguishable from a
-        normal suit of armor.</p>
-    </property-block>
-
-    <h3>Actions</h3>
-
-    <property-block>
-      <h4>Multiattack.</h4>
-      <p>The armor makes two melee attacks.</p>
-    </property-block>
-
-    <property-block>
-      <h4>Slam.</h4>
-      <p><i>Melee Weapon Attack:</i> +4 to hit, reach 5 ft., one target.
-        <i>Hit:</i> 5 (1d6 + 2) bludgeoning damage.</p>
-    </property-block>
-  </stat-block></body></html>
+  </content-column></stat-block></body></html>
