Update from master

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="outer" id="main_content_wrap">
       <section class="inner" id="main_content"><h1>A Web Component statblock for D&amp;D 5E</h1><p>Statblock5e provides an easy way to display a creature statblock that looks
 almost exactly like the statblocks from the 5th edition D&amp;D Monster Manual.</p><div align="center">
-  <img src="http://i.imgur.com/buhXuiR.png"/>
+  <img src="https://raw.githubusercontent.com/Valloric/statblock5e/gh-pages/images/statblock.png"/>
 </div><p>This is implemented as a set of custom elements following the <a href="http://webcomponents.org/">Web
 Components</a> specs: <a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a>, <a href="http://w3c.github.io/webcomponents/spec/custom/">Custom
 Elements</a>, <a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a> and the HTML5 <a href="https://html.spec.whatwg.org/multipage/scripting.html#the-template-element">template</a>
@@ -142,7 +142,7 @@ had nothing better to do and it was fun! :)</p><h2>FAQ</h2><h3>Is there a single
 source files. There's also <a href="http://valloric.github.io/statblock5e/demo-inlined.html"><code>demo-inlined.html</code></a> which renders
 exactly the same but has all the HTML-imports inlined directly into the
 document.</p><p>The Python script that produces the inlined version <a href="https://github.com/Valloric/statblock5e/blob/master/tools/inline-imports.py">is also
-available</a>.</p><h3>How do I make two-column layouts?</h3><p>See the <a href="http://valloric.github.io/statblock5e/demo-two-column.html"><code>demo-two-column.html</code></a> file (<a href="http://i.imgur.com/ydFbEjw.png">here's a rendered
+available</a>.</p><h3>How do I make two-column layouts?</h3><p>See the <a href="http://valloric.github.io/statblock5e/demo-two-column.html"><code>demo-two-column.html</code></a> file (<a href="https://raw.githubusercontent.com/Valloric/statblock5e/gh-pages/images/statblock.png">here's a rendered
 image</a>). The key thing to notice is the use of
 the <code>&lt;content-column&gt;</code> tags to mark up the content of a particular column. Their
 use is what makes a two-column layout possible.</p><h3>Why aren't you using polyfills?</h3><p>While polyfills for Web Components <a href="https://www.polymer-project.org/docs/start/platform.html">do exist</a>, they're not perfect and
