Adding forgotten closing tag for 2-col demo

--- a/demo-two-column.html
+++ b/demo-two-column.html
@@ -157,6 +157,7 @@
         <p>The werewolf can make one claw attack against each creature within 5
           feet of it.</p>
       </property-line>
+    </content-column>
   </stat-block>
 </body>
 </html>
