--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ almost exactly like the statblocks from the 5th edition D&amp;D Monster Manual.<
 Components</a> specs: <a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a>, <a href="http://w3c.github.io/webcomponents/spec/custom/">Custom
 Elements</a>, <a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a> and the HTML5 <a href="https://html.spec.whatwg.org/multipage/scripting.html#the-template-element">template</a>
 element.</p><p>Since Chrome is <a href="http://jonrimmer.github.io/are-we-componentized-yet/">currently the only browser</a> that implements all of
-the above specs, <strong>statblock5e only works in Chrome.</strong> (Firefox is close to
-providing all the necessary support but it's all behind flags.)</p><div align="center">
+the above specs, <strong>statblock5e only works in Chrome.</strong> Make sure you are using
+<em>at least</em> Chrome 45. (Firefox is close to providing all the necessary support
+but it's all behind flags.)</p><div align="center">
   <p><a href="http://valloric.github.io/statblock5e/demo.html">
      <b>LIVE DEMO</b></a>
   </p>
@@ -143,14 +144,17 @@ source files. There's also <a href="http://valloric.github.io/statblock5e/demo-i
 exactly the same but has all the HTML-imports inlined directly into the
 document.</p><p>The Python script that produces the inlined version <a href="https://github.com/Valloric/statblock5e/blob/master/tools/inline-imports.py">is also
 available</a>.</p><h3>How do I make two-column layouts?</h3><p>See the <a href="http://valloric.github.io/statblock5e/demo-two-column.html"><code>demo-two-column.html</code></a> file (<a href="https://raw.githubusercontent.com/Valloric/statblock5e/gh-pages/images/statblock-2c.png">here's a rendered
-image</a>). The key thing to notice is the use of
-the <code>&lt;content-column&gt;</code> tags to mark up the content of a particular column. Their
-use is what makes a two-column layout possible.</p><h3>Why aren't you using polyfills?</h3><p>While polyfills for Web Components <a href="https://www.polymer-project.org/docs/start/platform.html">do exist</a>, they're not perfect and
+image</a>). The key thing to notice is the use of the <code>data-two-column</code>
+attribute on the <code>&lt;stat-block&gt;</code> element. You can also use the
+<code>data-content-height</code> attribute to tweak the layout. See the comments in the
+file for details.</p><h3>Why aren't you using polyfills?</h3><p>While polyfills for Web Components <a href="https://www.polymer-project.org/docs/start/platform.html">do exist</a>, they're not perfect and
 require a preprocessing stage that inlines all HTML imports and rewrites the new
 CSS selectors like <code>:host</code>, <code>::content</code>, <code>/deep/</code> etc. There's no easy way to
 tie all this together and frankly, I don't care enough since I'll personally
 only use this for locally hosted pages rendered in Chrome.</p><p>If someone wants to do the required work to implement the whole preprocessing
-pipeline, pull requests are welcome.</p><h2>Version History</h2><h3>0.0.2</h3><ul>
+pipeline, pull requests are welcome.</p><h2>Version History</h2><h3>0.0.3</h3><ul>
+<li>Simpler way of supporting two-column layout.</li>
+</ul><h3>0.0.2</h3><ul>
 <li><code>&lt;property-line&gt;</code> can now be used for legendary actions since it doesn't
   hardcode red text.</li>
 <li>Support for two-column layout! See the new item in the FAQ.</li>
