--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -41,6 +41,11 @@
       -webkit-column-gap: 40px;
          -moz-column-gap: 40px;
               column-gap: 40px;
+
+      /* When height is constrained, we want sequential filling of columns. */
+      -webkit-column-fill: auto;
+         -moz-column-fill: auto;
+              column-fill: auto;
     }
 
     :host([data-two-column]) #content-wrap {
