Link to two-column demo file HTML comment

--- a/demo-two-column.html
+++ b/demo-two-column.html
@@ -31,7 +31,7 @@
        "balanced." Start with that.
          If that produces unpleasent results, you can use data-content-height to
        force the column heights to your liking. This will result in the first
-       column always being completely full an the second possibly having
+       column always being completely full and the second possibly having
        whitespace at the bottom.
          Be careful about setting a height that's too low! That will produce all
        sorts of weird results. -->
