Fix some small details

--- a/template.html
+++ b/template.html
@@ -379,8 +379,8 @@
 
 <stat-block>
     <creature-heading>
-      <h1>{TYPE}</h1>
-      <h2>{ALIGNMENT}</h2>
+      <h1>{NAME}</h1>
+      <h2>{TYPE} {ALIGNMENT}</h2>
     </creature-heading>
 
     <top-stats>
