Add core stats that I forgot about

--- a/template.html
+++ b/template.html
@@ -397,7 +397,14 @@
         <p>{SPEED}</p>
       </property-line>
 
-      <abilities-block data-cha="1" data-con="13" data-dex="11" data-int="1" data-str="14" data-wis="3"></abilities-block>
+      <abilities-block
+        data-cha="{CHA}"
+        data-con="{CON}"
+        data-dex="{DEX}"
+        data-int="{INT}"
+        data-str="{STR}"
+        data-wis="{WIS}">
+      </abilities-block>
 
       <property-line>
         <h4>Damage Immunities</h4>
